Revert "fixed alignment"
This reverts commit 25f6b78576bbb2992817cd833e13bb1c4c42b798.

--- a/maps/static/css/profile.css
+++ b/maps/static/css/profile.css
@@ -9,6 +9,5 @@ body {
     display: inline-block;
     vertical-align: middle;
     float: left;
-    padding-left: 10px;
-    text-align:left;
+    
 }
